{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 115,
  "lineage": "02f75841-e8e8-3a8b-0119-9f0afbe2778c",
  "resources": [
    {
      "module": "module.dev_server",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0555853e2bef3008a",
            "arn": "arn:aws:ec2:us-east-1:081009271281:elastic-ip/eipalloc-0555853e2bef3008a",
            "domain": "vpc",
            "id": "eipalloc-0555853e2bef3008a",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-18-235-153-183.compute-1.amazonaws.com",
            "public_ip": "18.235.153.183",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags_all": {
              "Environment": "dev",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.dev_server",
      "mode": "managed",
      "type": "aws_eip",
      "name": "static_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "backend",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d9f85b77a638eb66",
            "arn": "arn:aws:ec2:us-east-1:081009271281:elastic-ip/eipalloc-0d9f85b77a638eb66",
            "domain": "vpc",
            "id": "eipalloc-0d9f85b77a638eb66",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-230-198-201.compute-1.amazonaws.com",
            "public_ip": "34.230.198.201",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags_all": {
              "Environment": "dev",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.terraform_remote_state.vpc"
          ]
        },
        {
          "index_key": "database",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00036e3fcf0de4b8b",
            "arn": "arn:aws:ec2:us-east-1:081009271281:elastic-ip/eipalloc-00036e3fcf0de4b8b",
            "domain": "vpc",
            "id": "eipalloc-00036e3fcf0de4b8b",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-98-86-138-120.compute-1.amazonaws.com",
            "public_ip": "98.86.138.120",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags_all": {
              "Environment": "dev",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.terraform_remote_state.vpc"
          ]
        },
        {
          "index_key": "frontend",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d323018c1b3b3341",
            "arn": "arn:aws:ec2:us-east-1:081009271281:elastic-ip/eipalloc-0d323018c1b3b3341",
            "domain": "vpc",
            "id": "eipalloc-0d323018c1b3b3341",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-225-187-127.compute-1.amazonaws.com",
            "public_ip": "34.225.187.127",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags_all": {
              "Environment": "dev",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.terraform_remote_state.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev_server",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_port",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:081009271281:security-group/sg-09f1c0f21afb55a7e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09f1c0f21afb55a7e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow App Port 8000",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "terraform-20250812112132860700000004",
            "name_prefix": "terraform-",
            "owner_id": "081009271281",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Environment": "dev",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c588669df4e6762"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "081009271281",
            "id": "sg-09f1c0f21afb55a7e",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.dev_server",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:081009271281:security-group/sg-0dd87422cdc53d1ea",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dd87422cdc53d1ea",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20250812112132852200000002",
            "name_prefix": "terraform-",
            "owner_id": "081009271281",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Environment": "dev",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c588669df4e6762"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "081009271281",
            "id": "sg-0dd87422cdc53d1ea",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.dev_server",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:081009271281:security-group/sg-0d4aa129351d8d34d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d4aa129351d8d34d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "terraform-20250812112132872100000005",
            "name_prefix": "terraform-",
            "owner_id": "081009271281",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Environment": "dev",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c588669df4e6762"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "081009271281",
            "id": "sg-0d4aa129351d8d34d",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.dev_server",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:081009271281:security-group/sg-03178b47e6868eaf6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03178b47e6868eaf6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20250812112132852600000003",
            "name_prefix": "terraform-",
            "owner_id": "081009271281",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Environment": "dev",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c588669df4e6762"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "081009271281",
            "id": "sg-03178b47e6868eaf6",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}